<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.a.hub.ui.auth.AuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/box_rounded_background">

        <LinearLayout
            android:id="@+id/action_auth"
            style="@style/style_auth_button"
            android:visibility="@{viewModel.userState ? View.GONE : View.VISIBLE}"
            tools:ignore="UseCompoundDrawables">

            <ImageView style="@style/style_auth_image"
                android:contentDescription="@string/icon" />

            <TextView
                android:text="@string/sign_in_text"
                style="@style/style_auth_text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_auth_revoke"
            style="@style/style_auth_button"
            android:visibility="@{viewModel.userState ? View.VISIBLE : View.GONE}"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                app:tint="@color/red"
                style="@style/style_auth_image"
                android:contentDescription="@string/icon" />

            <TextView
                android:text="@string/revoke_text"
                style="@style/style_auth_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_auth_end"
            android:visibility="@{viewModel.userState ? View.VISIBLE : View.GONE}"
            style="@style/style_auth_button"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                style="@style/style_auth_image"
                android:contentDescription="@string/icon" />

            <TextView
                android:text="@string/sign_out_text"
                style="@style/style_auth_text"/>
        </LinearLayout>


    </LinearLayout>

</layout>