<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/transparent"
    android:clickable="true"
    android:focusable="true"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:padding="8dp"
        app:srcCompat="@drawable/outline_person_outline_24"
        android:background="@drawable/box_circle_foreground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:tintMode="src_in"
        app:tint="@color/tint"
        android:contentDescription="@string/user_image" />


    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="19sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/user_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <TextView
        android:id="@+id/action_auth"
        android:text="@string/sign_in"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/menu_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_auth"
        app:layout_constraintBottom_toTopOf="@+id/theme_holder"/>


    <LinearLayout
        android:id="@+id/theme_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:background="@drawable/box_circle_mid"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:checked="true"
            app:switchPadding="20dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>